--- a/_posts/2011-05-10-one.md
+++ b/_posts/2011-05-10-one.md
@@ -7,7 +7,7 @@ Finally, it's here. My new blog. Self-hosted, home-baked, 100% hand-crafted. A b
 **OMG**, I can't believe how long I put this off, this progress that took me about two days of 'coding', if my method of c&p combined with trial&error qualifies as such. It's funny: You might think I'm fishing for compliments here, but that's just the case if you're worse than me when it comes to HTML and such. If you're not, then you're probably laughing at my style.css' structure right now.  
 
 Anyway: I'm proud like Tom Hanks in 'Cast Away', when he finally managed to start a fire. Me can haz blog! But most important: I no longer can keep myself from writing by thinking that in order to do so, I would first need to build a new blog cause the last project's dead.
-### future ###
+## future ##
 I will talk about little aspects, decisions and stuff that yet has to be done regarding this blog. As you may know, in the first few days of such a project nothing is just 'done', everything gets a pretty short half-life. Therefore I will comment the further construction of this site as it happens.  
 So I'll handle it just like Iven announced on [his blog](http://ivenwinkelmann.com/journal), a quite similar project. Similar does not quite describe it, to tell the truth: I have to thank Iven, without him doing a lot of research and waving in front of my nose with sophisticated solutions, I wouldn't have developed the urge to build a non-wordpress-hosted blog from scratch.  
 Thanks, buddy. (Is 'mindfork' a word? This github stuff messes with my head)
