--- a/_posts/2011-05-11-Two.md
+++ b/_posts/2011-05-11-Two.md
@@ -7,13 +7,13 @@ When I first thought about my new blog, the only options for me were: WordPress,
 Let me explain: In this analogy, the previously mentioned platforms 'fry' the blog in the second one requests them from the web server. They generate every page in the blog via PHP, I believe. Blogs served that way are 'fried blogs'.  
 Guess what: The server doesn't have to generate static files. So your blog has a fighting chance of staying online, even when it gets [fireballed](http://blog.23x.net/216/anatomy-of-a-fireballing.html).
 Of course one can cache the fried files so they can be served more efficiently, and you lose the advantages of hosted platforms, i.e. blogging from on the road.
-### Why I went baked ###
+## Why I went baked ##
 But in which universe does that bother me? Most certainly, my blog will never get fireballed or sweat a tear under heavy load of hundreds of thousands of visitors. I'm not that into web server stuff that I could't bear with what some people may call an unsophisticated solution. So?  
 What made me consider a baked blog more seriously was that with wordpress, I always had the feeling to utilize something I didn't understand entirely. Using wordpress is simple, but to customize it is much harder. Therefore it's likely you just use it in a very standard way. That's ok for most people, I would suggest that for nearly everyone who's inclined to dive into the world of blogging. Which I strongly suggest, too.
 
 I, for my part, *knew* that I would be able to teach myself (or: remind) enough HTML and CSS to code something suitable for a static file generator (that's how you call the things that bake your blog). I knew that the second I heard of baked blogs, even thought I didn't realize it immediately.  
 Now, my blog only contains code I wrote myself or ripped off somebody else's git repository, knowing what it does and where to put it. To me, that's **very** appealing.
-### Jekyll ###
+## Jekyll ##
 Why did I chose [Jekyll](http://jekyllrb.com/)? At first I didn't want to. After Iven [told me about baked blogs](http://ivenwinkelmann.com/journal/my-take-on-baked-blogs/), I listened to an episode of Build & Analyze ([this one](http://5by5.tv/buildanalyze/18), but the following ones also fit the topic) in which Marco Arment (the [Instapaper](http://www.instapaper.com/iphone) guy) talked about his plans to release his self-written static site generator, 'Second Crack' on github. I also am a coffee nut, so its name (a specific point of time in the roasting process of coffee) made me want to use it. In the end, the idea that I was using this as an excuse to put the whole project off became a certainty, so I chose Jekyll, and here I am.  
   
 To be acurate: If you're interested in this topic, you propably want to read Brent Simmons' piece on it: [A plea for baked weblogs](http://inessential.com/2011/03/16/a_plea_for_baked_weblogs)
