--- a/_posts/2011-05-12-Three.md
+++ b/_posts/2011-05-12-Three.md
@@ -12,7 +12,7 @@ category: blog
 
 	No. It's not a bug<sup>3</sup>, it's a feature. You may have noticed that there's no 'About this Blog' in the navigation on the right. I intend to add such a page and then link to all the numbered posts on it. Then, every time I change or add something, I'll add a new numbered post. The result: This blog's real history instead of a static page that never is up to date or just reflects the current state. If you as a visitor want to know who I am, there already is the 'About' link to my Personal Page. That's my plan for now, if I change it, guess what kind of title the post will have.
 
-### (Where are the) Comments? ###
+## (Where are the) Comments? ##
 This one's too big for a list entry. As you may have realized, currently there are no comments on this blog. Two things.
 
 * I didn't get to it.
