--- a/_posts/2011-05-17-four.md
+++ b/_posts/2011-05-17-four.md
@@ -4,7 +4,7 @@ title: Four
 category: blog
 date: 2011-05-17 08:00:00
 ---
-### Custom 404 Page ###
+## Custom 404 Page ##
 Recently, I was inspired by a pic [Mike Monteiro](https://twitter.com/#!/mike_FTW) shared on twitter: the [dribblle 404 page](http://dribbble.com/404). I immediately wanted one of those! So I began, and some coding, texting and a flickr search on [search.creativecommons.org](http://search.creativecommons.org/#) later, there it was.
 
 <a href="http://blog.timmschoof.com/notthe404pagesoyoucanseeitworks"><img src="/images/error404.jpg" width="655" height="238" alt="404errorpage"></a>
