--- a/_posts/2011-08-26-Rambo-III.md
+++ b/_posts/2011-08-26-Rambo-III.md
@@ -2,7 +2,7 @@
 layout: post
 title: 'Rambo III'
 date: 2011-08-26 13:13:00
-category: movies and television
+category: movies_and_television
 published: true
 ---
 <div align="center"><img src="http://blog.timmschoof.com/images/rambo_III.png" align="middle" alt="screenshot"></div>  
