--- a/_posts/2011-11-17-tintin.md
+++ b/_posts/2011-11-17-tintin.md
@@ -2,7 +2,7 @@
 layout: post
 title: The Adventures of Tintin
 date: 2011-11-17 13:37:00
-category: movies and television
+category: movies_and_television
 published: true
 ---
 <iframe width="670" height="370" src="https://www.youtube-nocookie.com/embed/nlE4kXKwG7Y?rel=0" frameborder="0" allowfullscreen></iframe>
