--- a/_posts/2012-09-24-girls.md
+++ b/_posts/2012-09-24-girls.md
@@ -2,7 +2,7 @@
 layout: post
 title: &#34;Girls&#34;
 date: 2012-09-24 21:01:46
-category: movies and television
+category: movies_and_television
 published: true
 ---
 
