--- a/_posts/2011-11-18-trojan.md
+++ b/_posts/2011-11-18-trojan.md
@@ -2,7 +2,7 @@
 layout: post
 title: trojan
 date: 2011-11-18 15:42:00
-category: politics
+category: tech
 published: true
 ---
 I'm gonna tell you a story. A story that didn't take place in a constitutional democracy, obviously. No. It took place in a small country far, far away. We, here in Northern Germany, call it '**Bavaria**'. 
