--- a/_posts/2012-02-16-remix-part-4.md
+++ b/_posts/2012-02-16-remix-part-4.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Everything is a Remix Part 4
-category: politics
+category: tech
 published: true
 date: 2012-02-16 16:20:00
 ---
