--- a/_posts/2013-01-28-twelve.md
+++ b/_posts/2013-01-28-twelve.md
@@ -10,4 +10,4 @@ Today, I listened to the [latest Talk Show](http://www.muleradio.net/thetalkshow
 
 Later then, I ‘ran into’ moeffju's [blog post](http://moeffju.net/blog/py-iron-blogging) about something I didn't quite understand. But it had to do with feeds, and he closed with a derogatory comment about RSS. 
 
-See, I know when the universe gives me a hint. So I copy-pasted [this jekyll-ready example atom.xml ](https://github.com/coyled/coyled.com/blob/master/atom.xml) and customised it. It won't set the world on fire, but the [feed](http://feeds.feedburner.com/timmschoof) is now an **atom** one.
+See, I know when the universe gives me a hint. So I copy-pasted [this jekyll-ready example atom.xml ](https://github.com/coyled/coyled.com/blob/master/atom.xml) and customised it. It won't set the world on fire, but my [feed](http://feeds.feedburner.com/timmschoof) is now an **atom** one.
