--- a/_posts/2013-01-30-c.md
+++ b/_posts/2013-01-30-c.md
@@ -14,6 +14,6 @@ I recommend reading the [*Wired* piece](http://www.wired.com/design/2013/01/kick
 
 And watching it, of course:
 
-<div class="videoWrapper-2-1"><iframe src="http://player.vimeo.com/video/58429056?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;color=ff9933" width="1279" height="640" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+<div class="videoWrapper-2-1"><iframe src="http://player.vimeo.com/video/58429056?byline=0&amp;portrait=0&amp;badge=0&amp;color=ff9933" width="1279" height="640" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
 
 I loved the music, so I also [bought](http://knowyourmeme.com/photos/264241-shut-up-and-take-my-money) the [Soundtrack](http://c-themovie.bandcamp.com/album/c-soundtrack). 
