--- a/_posts/2013-01-25-ipad-mini.md
+++ b/_posts/2013-01-25-ipad-mini.md
@@ -33,7 +33,7 @@ After returning my Smart Cover, I went with a simple felt sleeve, [this one](htt
 ## The Experience
 In a draft of this post, I began listing all the possible ways to hold and type on an iPad mini. There's a shorter way of putting it: You can hold and use it in every way imaginable. One-handed, two-handed, in portrait or landscape, it doesn't matter. Even typing two-handed works in landscape as well as in portrait. Of course, if you have very large hands, that's gonna be a problem. Or, if you have relatively small hands, the Apple-advertised one-handed grip around the back could be problematic. For me, honestly, that's a very good way of holding the mini while reading on it, and my hands certainly don't count as 'huge'.
 
-The speakers (stereo! two speakers for higher volume!) are very good, considering the body volume of the device. Almost MacBook Air-like, but with different characteristics. 
+The speakers (stereo! two speakers for higher volume!) are very good, considering the body volume of the device. <s>Almost MacBook Air-like, but</s> With different characteristics, but imo better than the MacBook Air speakers. (*Update April 30, 2013*) 
 
 It just feels very good. Like I said, it is *fun* to pick it up. So thin. So light. Such good build quality. Check out [Andrew Kim's review](http://www.minimallyminimal.com/blog/ipad-mini-review) for some nice pictures. 
 
