--- a/_posts/2013-08-08-20-isnt-the-new-30.md
+++ b/_posts/2013-08-08-20-isnt-the-new-30.md
@@ -6,6 +6,10 @@ category: life
 published: true
 ---
 
-Energizing talk. Being in your twenties is just so full of opportunity.
+Energizing talk. 
+
+
+
+Being in your twenties is just so full of opportunity.
 
 <div class="videoWrapper-16-9"><iframe src="http://embed.ted.com/talks/meg_jay_why_30_is_not_the_new_20.html" width="853" height="480" frameborder="0" scrolling="no" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
