--- a/_posts/2013-08-26-notatort-cw-34.md
+++ b/_posts/2013-08-26-notatort-cw-34.md
@@ -12,8 +12,8 @@ So I've had the idea of having friends over and watching a *good* movie instead 
 
 John Carpenter's "The Thing" was the [first movie of the #notatort series](http://movie.timmschoof.com/34). Here's some related thoughts and info:
 
-This article connects Carpenter's work to H. P. Lovecraft, very interesting: [Cosmic Horror in John Carpenter's "Apocalypse Trilogy"](http://www.strangehorizons.com/2011/20111024/grey-a.shtml)
+* This article connects Carpenter's work to H. P. Lovecraft, very interesting: [Cosmic Horror in John Carpenter's "Apocalypse Trilogy"](http://www.strangehorizons.com/2011/20111024/grey-a.shtml)
 
-If you're interested in more of Carpenter's stuff, there's of course "[Escape From New York](http://www.imdb.com/title/tt0082340/)". It conveys a dark and punky vision of the future, and has more raw ‘Kurt Russel doing stuff’ in it. Carpenter did the soundtrack himself, it's all minimal music, so you may recognize that element of "The Thing" here. Here it is on [Spotify](http://spoti.fi/1390usD).
+* If you're interested in more of Carpenter's stuff, there's of course "[Escape From New York](http://www.imdb.com/title/tt0082340/)". It conveys a dark and punky vision of the future, and has more raw ‘Kurt Russel doing stuff’ in it. Carpenter did the soundtrack himself, it's all minimal music, so you may recognize that element of "The Thing" here. Here it is on [Spotify](http://spoti.fi/1390usD).
 
-"[Assault on Precicnt 13](http://www.imdb.com/title/tt0074156/)" goes more in the rustic filmmaking direction. A very simple setup creates a claustrophobic atmosphere, the soundtrack is also minimal and by Carpenter himself. I now freak out every time I hear an ice cream truck play its melody.
+* "[Assault on Precicnt 13](http://www.imdb.com/title/tt0074156/)" goes more in the rustic filmmaking direction. A very simple setup creates a claustrophobic atmosphere, the soundtrack is also minimal and by Carpenter himself. I now freak out every time I hear an ice cream truck play its melody.
