--- a/_posts/2013-08-26-notatort-cw-34.md
+++ b/_posts/2013-08-26-notatort-cw-34.md
@@ -6,7 +6,7 @@ category: movies_and_television
 published: true
 ---
 
-Well, here's the thing. I don't like the German TV Series "Tatort". It runs on Sundays, and people meet up to watch it together, and the German part of Twitter is also very busy with people talking, and let's be honest: mostly complaining about it. 
+Well, here's the thing. I don't like the German TV Series "Tatort". It runs on Sundays, people meet up to watch it together, and the German part of Twitter is also very busy with people talking. And let's be honest: mostly complaining about it. 
 
 So I've had the idea of having friends over and watching a *good* movie instead wandering around in my head for a while now. With [#notatort](http://movie.timmschoof.com), I'm trying exactly that. 
 
