--- a/_posts/2013-09-01-notatort-cw-35.md.md
+++ b/_posts/2013-09-01-notatort-cw-35.md.md
@@ -8,6 +8,6 @@ published: true
 
 It's true  what they say. The first time you watch *Primer*, you don't understand what's happening.
 
-It *is* amazing what Shane Carruth pulled off there. And not in a "it's cool cause it's complicated" way, but just because the movie really sucks you into its world with its unique atmosphere and way of storytelling. And once you have your own opinion about what happened, you can [start an edit war on Wikipedia](http://en.wikipedia.org/wiki/Primer_(film)).
+It *is* amazing what Shane Carruth pulled off there. And not in a "it's cool cause it's complicated" way, but just because the movie really sucks you into its world with its unique atmosphere and way of storytelling. And once you have your own opinion about what happened, you can [start an edit war on Wikipedia](http://en.wikipedia.org/wiki/Primer_(film).
 
 I just wanted to watch this movie so I can listen to [the time travel episode of *The Incomparable*](http://5by5.tv/incomparable/153). Can't wait to listen to Siracusa ramble about *12 Monkeys*, *Looper* and *Primer*. I still have *Looper* to go, but I'm linking the eipsode here anyway.
