--- a/_posts/2012-09-24-girls.md
+++ b/_posts/2012-09-24-girls.md
@@ -1,10 +1,11 @@
 ---
 layout: post
-title: &#34;Girls&#34;
+title: "&#34;Girls&#34;"
 date: 2012-09-24 21:01:46
 category: movies_and_television
 published: true
 ---
+
 
 I'm propably the last person on the planet to come to this conclusion and the 100th who tells you this, but: '**[Girls](http://www.imdb.com/title/tt1723816/)**' is a great TV show. Maybe the best I've seen in the easy-to-digest <30 minute section. 
 
