--- a/_posts/2012-03-02-ue-1.md
+++ b/_posts/2012-03-02-ue-1.md
@@ -7,7 +7,7 @@ published: true
 ---
 I've always wanted to, and now am, doing a podcast! [Timo](http://twitter.com/theuer) and me talk about... tech in general, and some other stuff - yeah, about Apple, too. It's in German, but I have no idea what percentage of visitors on my blog is from abroad, so I announce it here anyway.
 
-I'll dedicate a blogpost to every new episode and its contents, but on the sidebar there's a new link, '[Podcast](http://blog.timmschoof.com/podcast/)'. You'll find all the episodes there, in one place.  
+I'll dedicate a blogpost to every new episode and its contents, but on the sidebar there's a new link, '[Podcast](https://blog.timmschoof.com/podcast/)'. You'll find all the episodes there, in one place.  
 If you're already sold and wanna feed a feed to your podcasting app: [Audio RSS feed](http://feeds.feedburner.com/ungeheuerlich_eschoofierend).  
 If you prefer listening to podcasts via iTunes: [This way](http://itunes.apple.com/de/podcast/ungeheuerlich-eschoofierend/id507224771?l=en). You can also leave us a rating or a review there, we'd love that.
 
