--- a/_posts/2012-05-08-my-rp12.md
+++ b/_posts/2012-05-08-my-rp12.md
@@ -9,9 +9,9 @@ published: true
 was awesome. This year, everyone was feeling that the re:publica is a conference about society as a whole, not 'just' the Internet. Steady growth, the news coverage and the topics of the conference hint in that direction. With the Internet as a new frontier (there's gotta be a Kennedy quote around here!), a lot of existing conflicts get a new angle. That was true three years ago, but today a relevant amount of people recognizes that.  
 I find it incredibly hard to name a few main topics of this year's conference. Copyright was one, for sure. Freedom of speech and net neutrality too, but these are also very strongly connected to copyright (infringement). Then there's the whole 'Back to the Blog'-Movement, reinvented by Sascha Lobo (see last article). Noteworthy: I think Jekyll + github is a great solution.  
 All in all, one has to admit that the re:publica **is** a conference about society that is attended by Internet- and Tech-savvy people. But there's also the notion in the air that we need to take the discussion to our parents and friends to make them aware of where our future is decided. <br>
-<p style="text-align: center;"><a href="http://blog.timmschoof.com/images/rp12-11.jpg"><img src="http://blog.timmschoof.com/images/rp12-11.jpg"/></a><br/><small>There's much info material among the stuff I took with me from Berlin.</small></p>
+<p style="text-align: center;"><a href="https://blog.timmschoof.com/images/rp12-11.jpg"><img src="https://blog.timmschoof.com/images/rp12-11.jpg"/></a><br/><small>There's much info material among the stuff I took with me from Berlin.</small></p>
 
-I want to mention some talks about relatively isolated (if there's such a thing on the Internet) topics. [Tim Pritlove](http://twitter.com/#!/timpritlove) talked about podcasting, gave some input for [Timo and me](http://blog.timmschoof.com/podcast/). And there were two film students, [talking about independet films made with equipment that fits into a backpack](http://re-publica.de/12/panel/cinema-out-of-your-backpack-filmemachen-ist-demokratisiert/). *That's* disruption. Bernhard Pörksen talked about the [development of a scandal](http://re-publica.de/12/panel/der-entfesselte-skandal/) in the digital age, very interesting. 
+I want to mention some talks about relatively isolated (if there's such a thing on the Internet) topics. [Tim Pritlove](http://twitter.com/#!/timpritlove) talked about podcasting, gave some input for [Timo and me](https://blog.timmschoof.com/podcast/). And there were two film students, [talking about independet films made with equipment that fits into a backpack](http://re-publica.de/12/panel/cinema-out-of-your-backpack-filmemachen-ist-demokratisiert/). *That's* disruption. Bernhard Pörksen talked about the [development of a scandal](http://re-publica.de/12/panel/der-entfesselte-skandal/) in the digital age, very interesting. 
 
 Some more impressions
 
