--- a/_posts/2011-06-08-iOS-5.md
+++ b/_posts/2011-06-08-iOS-5.md
@@ -19,7 +19,7 @@ Oh, and iMessage syncs between your iDevices, exactly what Twitter DMs didn't. H
 Well, the old ones sucked. The new ones look great, usability-wise. I can enable far more notifications and still get less disturbed by them. 
 
 ## iCloud ##
-It's funny, just as I [wrote about](http://blog.timmschoof.com/2011/06/05/my-iOS-workflow/) how independent my iDevices are from the iTunes that's buried deep in the Windows partition on my desktop machine, Apple addresses that. Melikey. The contact and calendar stuff probably works like Google's services and like Mobile Me should have. The free mail address is nice, though. Note to myself: got to [get my hands on iOS 5 Beta](http://www.wired.com/gadgetlab/2011/06/ios5-upgrade-hack/) to save my favorite address/iCloud username.  
+It's funny, just as I [wrote about](https://blog.timmschoof.com/2011/06/05/my-iOS-workflow/) how independent my iDevices are from the iTunes that's buried deep in the Windows partition on my desktop machine, Apple addresses that. Melikey. The contact and calendar stuff probably works like Google's services and like Mobile Me should have. The free mail address is nice, though. Note to myself: got to [get my hands on iOS 5 Beta](http://www.wired.com/gadgetlab/2011/06/ios5-upgrade-hack/) to save my favorite address/iCloud username.  
 But the all-your-music-sucking-in 'iTunes match', that's really huge. Just as backup and sync over the air.  
 The new reminder's location function, luckily, is as awesome as it's creepy. I wonder how you can manage your mistress's  and wife's address - via address book or maybe via foursquare, so that everyone...? No, I'm kidding, I see 'Wunderlist' going into the trash as my ToDo app.  
 
